style(footer__xl): fix white space
This commit includes changes to white spaces on xl screens.
The change:

- Removal of white spaces on footer block

The change ensure that the block renders well on xl devices and
window or screen sizes.

--- a/style.css
+++ b/style.css
@@ -2783,7 +2783,8 @@ vertical-align: top;
   min-height: 30rem;
   display: grid;
   grid-template-columns: 37rem 1fr;
-  padding: 4% 8%;
+  padding: 4%;
+  gap:2rem;
 }
 
 .footer__info-block {
@@ -2794,7 +2795,7 @@ vertical-align: top;
 }
 
 .footer__info {
-  width: 100%;
+  width:90%;
   min-height: 15rem;
 }
 
@@ -2814,7 +2815,7 @@ vertical-align: top;
 
 .footer__info-links {
   min-height: 15rem;
-  width: 90%;
+  width: 100%;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
 }
